# detours_cmake_tpl

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md
dll_injector/: CMakeLists.txt  dll_injection.cpp  dll_injection.h  main.cpp
hooking_dll_tpl/: CMakeLists.txt  README.md  main.cpp  main.def
libdetours/: CMakeLists.txt
project_tpl/: CMakeLists.txt  README.md  main.cpp
run_and_hook/: CMakeLists.txt  main.cpp
test_app/: CMakeLists.txt  README.md  main.cpp
